# kbs_arduino_game

./: README.md  platformio.ini
include/: Adafruit_ILI9341.h  control.h  notes.h  score.h
lib/: CMakeLists.txt
lib/Adafruit-GFX-Library-master/: Adafruit_SPITFT.h
lib/Adafruit_FT6206_Library/: Adafruit_FT6206.cpp
lib/Adafruit_ImageReader-master/: Adafruit_ImageReader.cpp
lib/Nunchuk/examples/src/: nunchuk.cpp
lib/examples/: CMakeLists.txt
lib/screens/: screens.h
lib/sound/: sound.h
lib/ssd/: ssd.cpp  ssd.h
src/: Adafruit_GFX.cpp  Adafruit_ILI9341.cpp  Adafruit_SPITFT.cpp  control.cpp  main.cpp  notMain  score.cpp  screens.cpp  sound.cpp
src/display/: Adafruit_ILI9341.h
src/display/Adafruit-GFX/: Adafruit_GFX.h
src/display/fonts/: PressStart2P_vaV74pt7b.h  PressStart2P_vaV76pt7b.h
util/: grid.txt  gridMaker.py
